--- a/usr/initrd_files/init.rc
+++ b/usr/initrd_files/init.rc
@@ -620,3 +620,7 @@ on property:service.iptables.configure=0
 	start pcInternet_off 
 	
 #end of PCInternet share
+
+service postboot /postboot.sh
+	oneshot
+
